Changing strategy of managing form requests

--- a/web/src/main/resources/META-INF/piecework/templates/Layout.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Layout.template.html
@@ -10,7 +10,7 @@
     <link href="../static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="../static/css/layout.css" rel="stylesheet"/>
     <!--[if lt IE 9]>
-    <script src="https://raw.github.com/aFarkas/html5shiv/master/dist/html5shiv.js"></script>
+    <script src="../static/js/vendor/html5shiv.js"></script>
     <![endif]-->
 
 </head>
@@ -35,7 +35,5 @@
 
     <script type="text/javascript" id="piecework-context-script">
     </script>
-    <!--<script data-main="../static/js/main.js" src="../static/js/vendor/require.js"></script>-->
-
-    <script data-main="../static/js/main-built.js" src="../static/js/vendor/require.js"></script>
+    <script data-main="../static/js/main.js" src="../static/js/vendor/require.js"></script>
 </body>
