--- a/web/src/main/webapp/static/js/templates/form/form-toolbar.hbs
+++ b/web/src/main/webapp/static/js/templates/form/form-toolbar.hbs
@@ -4,7 +4,15 @@
     </div>
 </div-->
 <nav class="navbar navbar-default pw-navbar-collapse" style="margin-bottom: 0px">
-    <div class="container">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle search</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+    </div>
+    <div class="container collapse navbar-collapse navbar-ex1-collapse">
         <div class="row">
             <div class="col-lg-4 col-sm-4">
                 {{#if task}}
