--- a/web/src/main/webapp/static/js/templates/form/form.hbs
+++ b/web/src/main/webapp/static/js/templates/form/form.hbs
@@ -16,8 +16,8 @@
     <div class="notifications"></div>
     <div class="container">
         <div class="row">
-            <div class="crumbs col-lg-3">{{#breadcrumb this}}{{#url "step"}}{{/url}}{{/breadcrumb}}</div>
-            <div class="screen col-lg-9" id="{{screenId}}">
+            <div class="crumbs">{{#breadcrumb this}}{{#url "step"}}{{/url}}{{/breadcrumb}}</div>
+            <div class="screen" id="{{screenId}}">
                 <div class="screen-header"><h2>{{title}}</h2></div>
                 <div class="screen-content">
 
