--- a/web/src/main/webapp/static/ng/views/deployment-detail.html
+++ b/web/src/main/webapp/static/ng/views/deployment-detail.html
@@ -46,26 +46,124 @@
             </form>
         </div>
     </div>
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <div class="pull-right">
-                <div ng-if="deployment.editable" class="btn-group">
-                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                        <i class="icon-plus icon-1x"></i> <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">Add interaction</a></li>
-                        <li><a href="#">Add screen</a></li>
+    <div class="row">
+        <div class="col-lg-4">
+            <div class="panel panel-default">
+                <div class="panel-heading"><span class="lead">Sections</span></div>
+                <div class="panel-body">
+                    <ul>
+                        <li ng-repeat="section in deployment.sections">
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" ng-model="section.visible"/> <span ng-if="section.title">{{section.title}}</span><span ng-if="!section.title" class="text-muted">Untitled</span>
+                                </label>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
-            <span class="lead">User interactions</span>
         </div>
-        <div class="panel-body">
-            <div class="list-group">
-                <div ng-repeat="interaction in deployment.interactions" class="list-group-item">
-                    <button ng-if="deployment.editable" type="button" class="close" aria-hidden="true">&times;</button>
-                    <h4><a href="#/interaction/{{process.processDefinitionKey}}/{{deployment.deploymentId}}/{{interaction.id}}">{{interaction.label}}</a> <i class="icon-long-arrow-right"></i> <span class="label label-success" ng-repeat="taskDefinitionKey in interaction.taskDefinitionKeys">{{taskDefinitionKey}}</span></h4>
+        <div class="col-lg-8">
+            <div ng-repeat="section in deployment.sections" class="panel panel-default" ng-show="section.visible">
+                <div class="panel-heading">
+                    <div class="pull-right">
+                        <div ng-if="deployment.editable" class="btn-group">
+                            <button type="button" class="btn btn-default">
+                                <i class="icon-plus icon-1x"></i>Add section <span class="caret"></span>
+                            </button>
+                        </div>
+                    </div>
+                    <span class="lead" ng-if="section.title">{{section.title}}</span>
+                    <span class="lead text-muted" ng-if="!section.title">Untitled</span>
+                </div>
+                <div class="panel-body ng-hide">
+                    <form role="form">
+                        <fieldset>
+                            <div>
+                                <div ng-repeat="field in section.fields" class="form-group">
+                                    <label>{{field.label}}</label>
+                                    <div ng-switch on="field.type">
+                                        <div ng-switch-when="html" ng-bind-html="field.defaultValue">{{field.defaultValue}}</div>
+                                        <textarea ng-switch-when="textarea" class="form-control" name="{{field.name}}" placeholder="{{field.placeholder}}"></textarea>
+                                        <div ng-switch-when="checkbox">
+                                            <div class="checkbox" ng-repeat="option in field.options">
+                                                <label>
+                                                    <input type="checkbox" name="{{field.name}}" value="{{option.value}}"> {{option.label}}
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <input ng-switch-when="date" class="form-control" type="datetime-local" name="{{field.name}}"/>
+                                        <div ng-switch-when="radio">
+                                            <div class="radio" ng-repeat="option in field.options">
+                                                <label>
+                                                    <input type="radio" name="{{field.name}}" value="{{option.value}}"> {{option.label}}
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div ng-switch-when="select-one">
+                                            <select class="form-control" name="{{field.name}}" ng-options="option.value as option.label for option in options"></select>
+                                        </div>
+                                        <input ng-switch-default class="form-control" type="{{field.type}}" name="{{field.name}}" size="{{field.displayValueLength}}" maxlength="{{field.maxValueLength}}"/>
+                                    </div>
+                                </div>
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <div class="pull-right">
+                        <div ng-if="deployment.editable" class="btn-group">
+                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                                <i class="icon-plus icon-1x"></i> <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="#">Add interaction</a></li>
+                                <li><a href="#">Add screen</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <span class="lead">Task interactions</span>
+                </div>
+                <div class="panel-body">
+                    <div class="list-group">
+                        <div ng-repeat="interaction in deployment.interactions" class="list-group-item">
+                            <button ng-if="deployment.editable" type="button" class="close" aria-hidden="true">&times;</button>
+                            <span class="label label-success pull-right" ng-repeat="taskDefinitionKey in interaction.taskDefinitionKeys">{{taskDefinitionKey}}</span>
+                            <h4><a href="#/interaction/{{process.processDefinitionKey}}/{{deployment.deploymentId}}/{{interaction.id}}">{{interaction.label}}</a> </h4>
+                            <ul class="row">
+                                <li class="interaction-screen col-sm-6">
+                                    <div class="well">
+                                        <i class="icon-edit icon-1x"></i> {{interaction.requestScreen.title}}
+                                        <div class="caption">
+                                            <ul>
+                                                <li ng-repeat="section in interaction.requestScreen.sections">
+                                                    {{section.title}}
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </li>
+                                <!--li class="interaction-screen col-sm-12">
+                                    <div class="well">
+                                        <i class="icon-thumbs-up icon-1x"></i>
+                                        <div class="caption">
+
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="interaction-screen col-sm-12">
+                                    <div class="well">
+                                        <i class="icon-thumbs-down icon-1x"></i>
+                                        <div class="caption">
+
+                                        </div>
+                                    </div>
+                                </li-->
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
