--- a/web/src/main/webapp/static/ng/views/interaction-detail.html
+++ b/web/src/main/webapp/static/ng/views/interaction-detail.html
@@ -5,13 +5,16 @@
     <li><a href="#/deployment/{{process.processDefinitionKey}}/{{deployment.deploymentId}}">#{{deployment.deploymentVersion}}</a></li>
     <li class="active">{{interaction.label}}</li>
 </ul>
-<div class="pw-header">
+<div class="page-header">
+    <div class="pull-right">
+        <button class="btn btn-default" title="Can be started by anyone and requires no authorization"><i class="icon-unlock"></i> Public</button>
+    </div>
     <h2>Task interaction: {{interaction.label}}</h2>
 </div>
 <div class="row">
     <div class="pw-sidebar col-md-3">
         <ul class="pw-sidenav nav">
-            <li class="lead">Screens</li>
+            <li class="lead">User interfaces</li>
             <li ng-class="screen.cssClass" ng-repeat="(action, screen) in interaction.screens | orderActionType">
                 <a ng-click="onSelectScreen(screen, interaction.screens)">
                     <span ng-switch on="screen.action">
@@ -21,64 +24,75 @@
                     </span>
                     {{screen.title}}
                 </a>
-                <ul class="nav">
-                    <li ng-repeat="grouping in screen.groupings">
-                        {{grouping.title}}
+                <ul class="nav" ng-show="screen.cssClass=='active'  && screen.groupings.length > 1">
+                    <li ng-repeat="grouping in screen.groupings" ng-class="grouping.cssClass">
+                        <a ng-click="onSelectGrouping(grouping, screen.groupings)">
+                            <span ng-if="grouping.title">{{grouping.title}}</span>
+                            <span class="text-muted" ng-if="!grouping.title">Untitled screen</span>
+                        </a>
+                        <ul class="nav" ng-show="grouping.cssClass=='active' && grouping.sections.length > 1">
+                            <li ng-repeat="section in grouping.sections">
+                                <a ng-click="scrollTo(section.sectionId)"><span ng-if="section.title">{{section.title}}</span><span ng-if="!section.title" class="text-muted">Untitled</span></a>
+                            </li>
+                        </ul>
                     </li>
-                    <!--li ng-repeat="section in screen.sections">
-                        <a href="#{{section.sectionId}}"><span ng-if="section.title">{{section.title}}</span><span ng-if="!section.title" class="text-muted">Untitled</span></a>
-                    </li-->
                 </ul>
             </li>
         </ul>
     </div>
     <div class="col-md-9">
         <div ng-repeat="(action, screen) in interaction.screens | orderActionType" ng-show="screen.cssClass=='active'" class="screen">
-            <div ng-repeat="section in screen.sections" class="panel panel-default" ng-show="true||section.visible">
-                <div class="panel-heading">
-                    <div class="pull-right">
-                        <div ng-if="deployment.editable" class="btn-group">
-                            <button type="button" class="btn btn-default">
-                                <i class="icon-plus icon-1x"></i>Add section <span class="caret"></span>
-                            </button>
+            <div ng-repeat="grouping in screen.groupings" ng-show="grouping.cssClass=='active'" class="grouping">
+                <div ng-repeat="section in grouping.sections" class="panel panel-default" ng-show="true||section.visible">
+                    <div class="panel-heading">
+                        <div class="pull-right">
+                            <div ng-if="deployment.editable" class="btn-group">
+                                <button type="button" class="btn btn-default">
+                                    <i class="icon-plus icon-1x"></i>Add section <span class="caret"></span>
+                                </button>
+                            </div>
                         </div>
+                        <span class="lead" ng-if="section.title">{{section.title}}</span>
+                        <span class="lead text-muted" ng-if="!section.title">Untitled</span>
                     </div>
-                    <span class="lead" ng-if="section.title">{{section.title}}</span>
-                    <span class="lead text-muted" ng-if="!section.title">Untitled</span>
-                </div>
-                <div class="panel-body ng-hide">
-                    <form role="form">
-                        <fieldset>
-                            <div>
-                                <div ng-repeat="field in section.fields" class="form-group">
-                                    <label>{{field.label}}</label>
-                                    <div ng-switch on="field.type">
-                                        <div ng-switch-when="html" ng-bind-html="field.defaultValue">{{field.defaultValue}}</div>
-                                        <textarea ng-switch-when="textarea" class="form-control" name="{{field.name}}" placeholder="{{field.placeholder}}"></textarea>
-                                        <div ng-switch-when="checkbox">
-                                            <div class="checkbox" ng-repeat="option in field.options">
-                                                <label>
-                                                    <input type="checkbox" name="{{field.name}}" value="{{option.value}}"> {{option.label}}
-                                                </label>
+                    <div class="panel-body ng-hide">
+                        <form role="form" id="{{section.sectionId}}">
+                            <fieldset>
+                                <div>
+                                    <div ng-repeat="field in section.fields" class="form-group">
+                                        <label>{{field.label}}</label>
+                                        <div ng-switch on="field.type">
+                                            <div ng-switch-when="html" ng-bind-html="field.defaultValue">{{field.defaultValue}}</div>
+                                            <textarea ng-switch-when="textarea" class="form-control" name="{{field.name}}" placeholder="{{field.placeholder}}"></textarea>
+                                            <div ng-switch-when="checkbox">
+                                                <div class="checkbox" ng-repeat="option in field.options">
+                                                    <label>
+                                                        <input type="checkbox" name="{{field.name}}" value="{{option.value}}"> {{option.label}}
+                                                    </label>
+                                                </div>
                                             </div>
-                                        </div>
-                                        <input ng-switch-when="date" class="form-control" type="datetime-local" name="{{field.name}}"/>
-                                        <div ng-switch-when="radio">
-                                            <div class="radio" ng-repeat="option in field.options">
-                                                <label>
-                                                    <input type="radio" name="{{field.name}}" value="{{option.value}}"> {{option.label}}
-                                                </label>
+                                            <input ng-switch-when="date" class="form-control" type="datetime-local" name="{{field.name}}"/>
+                                            <div ng-switch-when="radio">
+                                                <div class="radio" ng-repeat="option in field.options">
+                                                    <label>
+                                                        <input type="radio" name="{{field.name}}" value="{{option.value}}"> {{option.label}}
+                                                    </label>
+                                                </div>
                                             </div>
+                                            <div ng-switch-when="select-one">
+                                                <select class="form-control" name="{{field.name}}" >
+                                                    <option ng-repeat="option in field.options" value="{{option.value}}">
+                                                        {{option.label!='' && option.label || option.value}}
+                                                    </option>
+                                                </select>
+                                            </div>
+                                            <input ng-switch-default class="form-control" type="{{field.type}}" name="{{field.name}}" size="{{field.displayValueLength}}" maxlength="{{field.maxValueLength}}"/>
                                         </div>
-                                        <div ng-switch-when="select-one">
-                                            <select class="form-control" name="{{field.name}}" ng-options="option.value as option.label for option in options"></select>
-                                        </div>
-                                        <input ng-switch-default class="form-control" type="{{field.type}}" name="{{field.name}}" size="{{field.displayValueLength}}" maxlength="{{field.maxValueLength}}"/>
                                     </div>
                                 </div>
-                            </div>
-                        </fieldset>
-                    </form>
+                            </fieldset>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
