--- a/web/src/main/webapp/static/ng/views/deployment-list.html
+++ b/web/src/main/webapp/static/ng/views/deployment-list.html
@@ -3,6 +3,17 @@
     <li><a href="#/process/{{process.processDefinitionKey}}">{{process.processDefinitionLabel}}</a></li>
     <li class="active">Deployments</li>
 </ul>
+<alert ng-repeat="alert in alerts" type="alert.type" close="closeAlert($index)">
+    <div class="container">
+        <div class="row">{{alert.msg}}</div>
+        <div class="row">
+            <div>
+                <button ng-click="deleteDeployment()" class="btn btn-danger">Yes</button>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </div>
+</alert>
 <table class="table">
     <thead>
     <tr>
@@ -11,15 +22,21 @@
         <th>Created</th>
         <th>Deployed</th>
         <th>Published</th>
+        <th></th>
     </tr>
     </thead>
     <tbody>
     <tr ng-repeat="deployment in deployments">
-        <td>{{deployment.deploymentVersion}} <span ng-if="deployment.published" title="Deployed on {{deployment.deployed | date:'medium' }}"><i class="icon-rocket"></i></span></td>
+        <td>{{deployment.deploymentVersion}} <span ng-if="deployment.published" title="Published on {{deployment.datePublished | date:'medium' }}"><i class="icon-rocket"></i></span></td>
         <td><a href="#/deployment/{{process.processDefinitionKey}}/{{deployment.deploymentId}}" title="{{deployment.deploymentLabel}}">{{deployment.deploymentLabel}}</a></td>
         <td>{{deployment.dateCreated | date:'medium' }}</td>
         <td>{{deployment.dateDeployed | date:'medium' }}</td>
         <td>{{deployment.datePublished | date:'medium' }}</td>
+        <td>
+            <a ng-click="copyDeployment(process.processDefinitionKey, deployment.deploymentId)" style="cursor:pointer"><i class="icon-copy"></i></a>
+            &nbsp;
+            <a ng-click="confirmDeleteDeployment(process.processDefinitionKey, deployment.deploymentId, deployment.deploymentVersion, deployment.deploymentLabel)" ng-if="deployment.deploymentId!=process.deploymentId" class="text-danger" style="cursor:pointer"><i class="icon-remove-sign"></i></a>
+        </td>
     </tr>
     </tbody>
 </table>
