--- a/web/src/main/resources/META-INF/piecework/templates/IndexView.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/IndexView.template.html
@@ -38,11 +38,14 @@
         </div>
     </div>
 
+    <script src="../static/js/vendor/jquery-1.10.2.min.js"></script>
+    <script src="../static/js/vendor/jquery-ui-1.10.3.custom.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-resource.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-sanitize.min.js"></script>
     <script src="../static/js/vendor/ui-bootstrap-0.6.0.min.js"></script>
     <script src="../static/js/vendor/ui-bootstrap-tpls-0.6.0.js"></script>
     <script src="../static/ng/js/designer.js"></script>
+    <script src="../static/js/vendor/ui-sortable.js"></script>
 </body>
 </html>
