--- a/web/src/main/webapp/static/ng/views/deployment-list.html
+++ b/web/src/main/webapp/static/ng/views/deployment-list.html
@@ -21,21 +21,23 @@
         <th>Label</th>
         <th>Created</th>
         <th>Deployed</th>
-        <th>Published</th>
+        <th>Released</th>
         <th></th>
     </tr>
     </thead>
     <tbody>
     <tr ng-repeat="deployment in deployments">
-        <td>{{deployment.deploymentVersion}} <span ng-if="deployment.published" title="Published on {{deployment.datePublished | date:'medium' }}"><i class="icon-rocket"></i></span></td>
-        <td><a href="#/deployment/{{process.processDefinitionKey}}/{{deployment.deploymentId}}" title="{{deployment.deploymentLabel}}">{{deployment.deploymentLabel}}</a></td>
+        <td>{{deployment.deploymentVersion}} <span ng-if="deployment.published" title="Released on {{deployment.datePublished | date:'medium' }}"><i class="icon-rocket"></i></span></td>
+        <td><a href="#/deployment/{{process.processDefinitionKey}}/{{deployment.deploymentId}}" title="Edit #{{deployment.deploymentVersion}}">{{deployment.deploymentLabel}}</a></td>
         <td>{{deployment.dateCreated | date:'medium' }}</td>
         <td>{{deployment.dateDeployed | date:'medium' }}</td>
         <td>{{deployment.datePublished | date:'medium' }}</td>
         <td>
-            <a ng-click="copyDeployment(process.processDefinitionKey, deployment.deploymentId)" style="cursor:pointer"><i class="icon-copy"></i></a>
+            <a href="#/interaction/{{process.processDefinitionKey}}/{{deployment.deploymentId}}" role="button" title="Configure user interfaces"><i class="icon-desktop"></i></a>
             &nbsp;
-            <a ng-click="confirmDeleteDeployment(process.processDefinitionKey, deployment.deploymentId, deployment.deploymentVersion, deployment.deploymentLabel)" ng-if="deployment.deploymentId!=process.deploymentId" class="text-danger" style="cursor:pointer"><i class="icon-remove-sign"></i></a>
+            <a ng-click="copyDeployment(process.processDefinitionKey, deployment.deploymentId)" style="cursor:pointer" role="button" title="Clone this deployment"><i class="icon-copy"></i></a>
+            &nbsp;
+            <a ng-click="confirmDeleteDeployment(process.processDefinitionKey, deployment.deploymentId, deployment.deploymentVersion, deployment.deploymentLabel)" ng-if="deployment.deploymentId!=process.deploymentId" class="text-danger" style="cursor:pointer" role="button" title="Delete deployment"><i class="icon-remove-sign"></i></a>
         </td>
     </tr>
     </tbody>
